--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.1",
+    "chart.js": "^3.1.1",
     "core-js": "3.6.5",
     "crypto-js": "^4.0.0",
     "element-ui": "2.13.2",
@@ -24,6 +25,7 @@
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
+    "vue-chartjs": "^3.5.1",
     "vue-particles": "^1.0.9",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
@@ -39,7 +41,6 @@
     "chalk": "2.4.2",
     "connect": "3.6.6",
     "html-webpack-plugin": "3.2.0",
-    "mockjs": "1.0.1-beta3",
     "runjs": "4.3.2",
     "sass": "1.26.8",
     "sass-loader": "8.0.2",
